[package]
name = "iex"
version = "0.2.0"
authors = ["Alisa Sireneva <me@purplesyringa.moe>"]
edition = "2021"
description = "Idiomatic exceptions"
documentation = "https://docs.rs/iex"
repository = "https://github.com/iex-rs/iex"
license = "MIT OR Apache-2.0"
keywords = ["ergonomic", "error", "panic"]
categories = ["rust-patterns"]

[dependencies]
anyhow = { version = "1", optional = true }
fix-hidden-lifetime-bug = "0.2.6"
iex-derive = { path = "iex-derive", version = "0.2.0" }
typeid = "1.0.0"

[dev-dependencies]
criterion = "0.5"

[features]
anyhow = ["dep:anyhow"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "unwind"
harness = false

