[package]
name = "iex-derive"
version = "0.1.1"
authors = ["Alisa Sireneva <me@purplesyringa.moe>"]
edition = "2021"
description = "Derive macros for #[iex]"
repository = "https://github.com/iex-rs/iex"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full", "visit-mut"] }
quote = "1"
darling = "0.20"
